name:                Haskell-SSH-Client
version:             0.0
stability:           alpha
synopsis:            A haskell library that is a ssh client.
license:             BSD3
license-file:        LICENSE
author:              TBD
maintainer:          TBD TBD <TBD@TBD.TBD>
cabal-version:       >=1.2
build-type:          Simple


library
  build-depends:     base,
                     pipes (>= 3.0.0),
                     bytestring,
                     network,
                     binary,
                     transformers
  exposed-modules:   Network.SSH.Client,
                     Network.SSH.Transport
  ghc-options:       -Wall -O2

executable hssh
  build-depends:     base
  main-is:           hssh.hs
  hs-source-dirs:    hssh,.
  other-modules:     Network.SSH.Client
  ghc-options:       -Wall -O2
